styles.css
* {
    box-sizing: border-box;
}


body {
    margin: 0;
    padding: 0;
    color: #ff5100;
    font-family: 'Roboto', sans-serif;
    height: 100vh;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center; 
    gap: 70px; 

}

button {
    width: 106px;
    height: 40px;
    background-color: #ff5100; 
    border: none;
    color: #fff;
    border-radius: 8px;
    font-size: 0.9rem;
    padding: 2px;

}

h1 {
    font-size: 2rem;
   
}

h2 {
    font-size: 1.8rem;
  
}

p {
    font-size: 1.4rem;
   
}

h1,
h2,
p {
    text-align: center; 
}

.left p,
.right p {
    font-weight:600;
}

.small-images {
    display: flex;
    justify-content: center;
    margin-top: 45px;
}

.main-buttons {
    display: flex;
    justify-content: center;
    gap: 10px;
}



.container {
    width: 600px; 
    
}

.play-again {
    display: block;
    margin: 0 auto;
}

/* Special class*/

.hidden {
    display: none;
}

.left,
.right,
.container {
    height: 430px;
}

.player-image,
.computer-image {
    display: block;
    margin: 0 auto;
}

